fixed alignment and spelling mistake

--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
+  justify-items: center;
   padding: 2rem 0;
 }
 
